--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#about">About</a>
             <a href="#skill">Skills</a>
             <a href="#projects" >Projects</a>
-            <a href="#" >Resume</a>
+            <a href="#bttn" >Resume</a>
             <a href="#contact">Contact</a>
         </nav>
         
@@ -31,16 +31,14 @@
             <h3>Hello!  It's me</h3>
             <h1> Srija Mazumder</h1>
             <h3>I am a budding <span> Front-end Developer</span></h3>
-            <p>I am currently pursuing Bachelor in Technology in Computer Scienece and Technology from Hooghly Engineering and Technology College. 
-                I am now in 3rd year . My interets are - singing, reading books, etc.
-
-            </p>
+            <p>I am a undergraduate student in 
+            Hooghly Engineering & technology college</p>
             <div class="medias">
-                <a href=""><i class='bx bxl-linkedin-square'></i></a>
-                <a href=""><i class='bx bxl-github'></i></a>
-                <a href=""><i class='bx bxl-gmail' ></i></a>
+                <a href="https://www.linkedin.com/in/srija-mazumder-67ba9b224/"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/Srija-Mazumder"><i class='bx bxl-github'></i></a>
+                <a href="srijamazumder004@gmail.com"><i class='bx bxl-gmail' ></i></a>
             </div>
-            <a href="" class="btn">Download CV</a>
+            <div id="bttn"><a href="https://apricot-gillian-22.tiiny.site/" class="btn">Download CV</a></div>
         </div>
         <div class="home-img">
             <img src="imgg.jpg" >
